tests/parser-test-files/parse-loop.txt
================================================================================
Malformed loop expression
================================================================================

(package test-parser)

(define f (loop))

--------------------------------------------------------------------------------

error: Malformed loop expression
  --> test:3:16
   |
 3 |  (define f (loop))
   |                 ^ expected a loop body

================================================================================
Malformed loop expression
================================================================================

(package test-parser)

(define f (loop :alabel))

--------------------------------------------------------------------------------

error: Malformed loop expression
  --> test:3:24
   |
 3 |  (define f (loop :alabel))
   |                         ^ expected a loop body
